# imports

./: .gitignore  Cargo.toml  Taskfile.yaml
data/: commission.columns.json  contact_attempt.columns.json  customer_tag.columns.json  datentraeger.columns.json  kam.columns.json  sap.columns.json
src/: commission.rs  customer_tag.rs  datentraeger.rs  generated.rs  kam.rs  main.rs  sap.rs  simple.rs
src/commission/: mod.rs  tests.rs
src/contact_attempt/: contact_type.rs  mod.rs  rating.rs  result.rs  status.rs  tests.rs
src/customer_tag/: mod.rs  tests.rs
src/datentraeger/: mod.rs  tests.rs
src/kam/: mod.rs  tests.rs
src/meterpoint_value/: mod.rs  myelectric.rs  netze_noe.rs  netze_ooe.rs  tests.rs  wiener_netze.rs
src/sap/: mod.rs  tests.rs
templates/: importer.rs.tera
var/: simple.xlsx  simple_permutated.xlsx
