[package]
name = "imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#polars = { version = "0.24.3", features = ["lazy", "strings"] }
calamine = { version = "0.19.1", features = ["dates"] }
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
csv = "1.1.6"
chrono = "0.4.23"
tera = "1.17.1"
convert_case = "0.6.0"


[[bin]]
name = "importsctl"
path = "src/main.rs"


[[bin]]
name = "create-import"
path = "src/bin/create-import.rs"
